--- a/DoAn/ComputerStore/Areas/User/Views/Categories/Card3060.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/Categories/Card3060.cshtml
@@ -55,7 +55,7 @@
                             <div class="product-about-price">
                                 <div class="product-price">
                                     <p class="original-price">20,420,000₫</p>
-                                    <p class="new-price">@item.Product.Price</p>
+                                    <p class="new-price">@item.Product.Price.ToString("N0")</p>
                                 </div>
                                 <div class="product-sale-off">
                                     -5%
