--- a/DoAn/ComputerStore/Areas/User/Views/Categories/ManHinhAsusTuf.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/Categories/ManHinhAsusTuf.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="product-content">
                 <div class="product-header">
-                    <span class="product-header-theme">Top PC Bán Chạy</span>
+                    <span class="product-header-theme">Màn hình chính hãng ASUS TUF CAO CẤP</span>
                     <a href="" class="product-view-all">
                         Xem tất cả
                         <i class="fas fa-angle-right"></i>
