--- a/DoAn/ComputerStore/Areas/User/Views/Home/Index.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/Home/Index.cshtml
@@ -544,7 +544,7 @@
                             <div class="product-about-price">
                                 <div class="product-price">
                                     <p class="original-price">20,420,000₫</p>
-                                    <p class="new-price">@item.P.Price ₫</p>
+                                    <p class="new-price">@item.P.Price.ToString("N0")₫</p>
                                 </div>
                                 <div class="product-sale-off">
                                     -5%
@@ -583,7 +583,7 @@
                             <div class="product-about-price">
                                 <div class="product-price">
                                     <p class="original-price">20,420,000₫</p>
-                                    <p class="new-price">@item.P.Price ₫</p>
+                                    <p class="new-price">@item.P.Price.ToString("N0") ₫</p>
                                 </div>
                                 <div class="product-sale-off">
                                     -5%
