--- a/DoAn/ComputerStore/Areas/User/Views/Shared/_LayoutUser.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/Shared/_LayoutUser.cshtml
@@ -40,7 +40,7 @@
                             <div class="account">
                                 @if (Session["UserID"] != null)
                                 {
-                                    <a class="header-top-right" href="#">
+                                    <a class="header-top-right" href="~/User/OrderItems/Index">
                                         <i class="fas fa-user-circle"></i>
                                         <div class="header-right-text">Chào, @Session["UserName"]</div>
                                     </a>
