--- a/DoAn/ComputerStore/Areas/User/Views/CartItems/Index.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/CartItems/Index.cshtml
@@ -160,66 +160,76 @@
                 </div>
             </div>
             <!--Use for loop here to generate div for every product-->
-            @foreach (var item in Model)
+            @if (!Model.Any())
             {
-                totalProducts++;
-                totalPrice += (int)item.Product.Price * item.CartItem.Quantity;
-                <div class="row m-cart-item" data-product-id="" data-max-quantity="">
-                    <div class="card pt-4">
-                        <div class="card-body row align-items-center">
-                            <div class="col-3">
-                                <div class="d-flex flex-row align-items-center gap-3">
-                                    <img class="" width="60" src="~/assets_user/image/data-image/@item.Product.Image1" alt="Product Image" />
-                                    <h6>
-                                        @item.Product.ProductName
+                <div class="alert alert-warning text-center">
+                    GIỎ HÀNG CỦA BẠN ĐANG TRỐNG
+                </div>
+            }
+            else
+            {
+                foreach (var item in Model)
+                {
+                    totalProducts++;
+                    totalPrice += (int)item.Product.Price * item.CartItem.Quantity;
+                    <div class="row m-cart-item" data-product-id="" data-max-quantity="">
+                        <div class="card pt-4">
+                            <div class="card-body row align-items-center">
+                                <div class="col-3">
+                                    <div class="d-flex flex-row align-items-center gap-3">
+                                        <img class="" width="60" src="~/assets_user/image/data-image/@item.Product.Image1" alt="Product Image" />
+                                        <h6>
+                                            @item.Product.ProductName
 
-                                    </h6>
+                                        </h6>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="d-flex flex-row align-items-center gap-3">
-                                    <h6>
-                                        @foreach (var detail in item.ProductDetails)
-                                        {
-                                            @detail.SpecificationValue <br />
-                                        }
+                                <div class="col-3">
+                                    <div class="d-flex flex-row align-items-center gap-3">
+                                        <h6>
+                                            @foreach (var detail in item.ProductDetails)
+                                            {
+                                                @detail.SpecificationValue <br />
+                                            }
 
-                                    </h6>
+                                        </h6>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="row text-center text-secondary align-items-center">
-                                    <div class="col-4 related-product">
+                                <div class="col-6">
+                                    <div class="row text-center text-secondary align-items-center">
+                                        <div class="col-4 related-product">
 
-                                        <div class="m-discount-price">33.320.000₫</div>
-                                        <div class="m-product-price justify-content-center">
-                                            <div class="m-origin-price">
-                                                @item.Product.Price.ToString("N0")₫
+                                            <div class="m-discount-price">33.320.000₫</div>
+                                            <div class="m-product-price justify-content-center">
+                                                <div class="m-origin-price">
+                                                    @item.Product.Price.ToString("N0")₫
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-3">
-                                        <div>
-                                            @item.CartItem.Quantity
-                                        </div>
-                                    </div>
-                                    <div class="col-3 related-product">
-                                        <div class="m-product-price justify-content-center">
-                                            <div class="m-origin-price text-secondary total-price">
-                                                @((@item.Product.Price * @item.CartItem.Quantity).ToString("N0"))₫
-
+                                        <div class="col-3">
+                                            <div>
+                                                @item.CartItem.Quantity
                                             </div>
                                         </div>
-                                    </div>
+                                        <div class="col-3 related-product">
+                                            <div class="m-product-price justify-content-center">
+                                                <div class="m-origin-price text-secondary total-price">
+                                                    @((@item.Product.Price * @item.CartItem.Quantity).ToString("N0"))₫
 
-                                    <div class="col-2">
-                                        <i class="fas fa-trash"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-2">
+                                            <i class="fas fa-trash"></i>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                }
+
             }
 
             <!--End for loop-->
