--- a/DoAn/ComputerStore/Areas/User/Views/OrderItems/OrderedItems.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/OrderItems/OrderedItems.cshtml
@@ -43,17 +43,19 @@
                         <!--#region for loop-->
                         <div class="card pt-2">
                             <div class="card-body d-flex flex-column">
-                                <div class="m-orderitem-status">
-                                    ĐÃ HỦY
+                                <div class="m-orderitem-status" style="color: #FFA500">
+                                    @item.Status
                                 </div>
                                 <div class="row mt-2">
                                     <div class="col-9">
                                         <div class="d-flex flex-row align-items-center gap-3">
                                             <img class="" width="60" src="~/assets_user/image/data-image/@item.Product.Image1" alt="Product Image" />
                                             <div>
-                                                PC GVN x Corsair iCUE (Intel i5-14600KF/ VGA RTX 40000 Ti)
-                                                PC GVN x Corsair iCUE (Intel i5-14600KF/ VGA RTX 4060 Ti)
-                                                PC GVN x Corsair iCUE (Intel i5-14600KF/ VGA RTX 4060 Ti)
+                                                @item.Product.ProductName/
+                                                @foreach (var detail in item.Product.ProductDetails)
+                                                {
+                                                    <span>@detail.SpecificationValue /</span>
+                                                }
                                                 <div class="font-weight-medium text-danger">x @item.Quantity</div>
                                             </div>
                                         </div>
@@ -84,7 +86,11 @@
                                     </div>
                                     <div class="d-flex flex-row align-items-center gap-3 w-100 justify-content-end">
                                         <div class="m-mr-auto m-font-size-12 text-secondary">Đã hủy bởi (bạn/shop)</div>
-                                        <button class="btn btn-danger">Mua Lại</button>
+                                        <button class="btn btn-danger">
+                                            <a href="~/User/ProductDetails/Index/@item.ProductID" style="color: #FFFEFB">
+                                                Mua lại
+                                            </a>
+                                        </button>
                                         <button class="btn btn-outline-secondary">Xem Chi Tiết</button>
                                     </div>
                                 </div>
